# quoteran

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  pylint.yml
quoteran/: __init__.py  __main__.py  core.py  ui.py
ranquote/: core.py
