[tool.poetry]
name = "quoteran"
version = "1.1.0"
description = "Random quotes on Terminal"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/UltiRequiem/quoteran"
repository = "https://github.com/UltiRequiem/quoteran"
keywords = ["commands", "utilities", "cli", "quotes"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
quoteran = 'quoteran:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
